k8s/manifests/core/security/kyverno/policies/remove-cpu-limit.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remove-cpu-limit
spec:
  rules:
    - name: remove-cpu-limit
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - (name): "*"
                resources:
                  limits:

            containers:
              - (name): "*"
                resources:
                  limits:
