k8s/manifests/core/security/kyverno/policies/set-internal-ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-internal-ingress-annotations
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true

  rules:
    - name: set-internal-ingress-annotations
      match:
        any:
          - resources:
              kinds:
                - Ingress
      exclude:
        any:
          - resources:
              annotations:
                external-dns/is-public: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/whitelist-source-range): |-
                "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
